--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -28,7 +28,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.12"
   },
   "browserslist": {
     "production": [
