feat: Enhance loading component with toilet animation and styles
feat: Implement MapPage component with geolocation and restroom features

style: Add styles for MapboxView component and its elements

feat: Create MapboxView component for interactive map with restroom markers

feat: Add AddRestroomForm component for submitting new restroom details

style: Create styles for AddRestroomForm component

style: Add styles for MapPage layout and responsive design

feat: Implement service worker for caching map tiles and API requests

test: Setup testing environment with mocks for Mapbox GL

--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -4,11 +4,13 @@
   "private": false,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.1.0",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.5",
-    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -16,7 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
     "zustand": "^4.4.7"
@@ -28,10 +30,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^3.4.1"
   },
   "browserslist": {
     "production": [
