--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -35,9 +35,10 @@
     "@types/mapbox-gl": "^2.7.19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1"
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
