--- a/puper/frontend/vercel.json
+++ b/puper/frontend/vercel.json
@@ -1,5 +1,8 @@
 {
   "buildCommand": "npm run vercel-install && npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
-  "framework": "create-react-app"
+  "installCommand": "npm install --force --legacy-peer-deps",
+  "framework": "create-react-app",
+  "env": {
+    "SKIP_PREFLIGHT_CHECK": "true"
+  }
 }
