CLEAN FIX: Remove conflicting overrides, add direct AJV dependency

--- a/puper/frontend/vercel.json
+++ b/puper/frontend/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run vercel-install && npm run build",
-  "installCommand": "npm install --force --legacy-peer-deps",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "create-react-app",
   "env": {
     "SKIP_PREFLIGHT_CHECK": "true"
