--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -23,28 +23,19 @@
     "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "ajv": "^6.12.6"
   },
   "resolutions": {
     "leaflet": "^1.9.0",
-    "react-leaflet": "^4.0.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "ajv-formats": "^1.6.1",
-    "schema-utils": "^3.3.0"
-  },
-  "overrides": {
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "ajv-formats": "^1.6.1",
-    "schema-utils": "^3.3.0"
+    "react-leaflet": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-install": "npm install --force --legacy-peer-deps && npm install ajv@6.12.6 ajv-keywords@3.5.2 ajv-formats@1.6.1 schema-utils@3.3.0 leaflet@1.9.0 react-leaflet@4.0.0 --force --legacy-peer-deps"
+    "vercel-install": "npm install --legacy-peer-deps"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.19",
