--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -19,17 +19,13 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "react-leaflet": "^4.2.1",
+
     "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
-    "zustand": "^4.4.7",
-    "ajv": "^6.12.6"
+    "zustand": "^4.4.7"
   },
-  "resolutions": {
-    "leaflet": "^1.9.0",
-    "react-leaflet": "^4.0.0"
-  },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,6 +35,7 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.19",
+    "ajv": "^6.12.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react-scripts": "^5.0.1",
