--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -23,7 +23,8 @@
     "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "ajv-keywords": "^3.5.2"
   },
 
   "scripts": {
