--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -6,6 +6,8 @@
     "@heroicons/react": "^2.0.18",
     "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@mapbox/mapbox-gl-geocoder": "^5.1.0",
+    "@supabase/supabase-js": "^2.55.0",
+    "ajv-keywords": "^3.5.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -19,14 +21,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-
     "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
-    "zustand": "^4.4.7",
-    "ajv-keywords": "^3.5.2"
+    "zustand": "^4.4.7"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
