fix: Correct background image URL in HomePage CSS

--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
+    "@googlemaps/markerclusterer": "^2.6.2",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@heroicons/react": "^2.0.18",
     "@mapbox/mapbox-gl-directions": "^4.3.1",
