--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.18.0",
+    "jsonpointer": "^5.0.1",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.14.0",
     "react": "^18.2.0",
@@ -27,11 +28,12 @@
     "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.30.1",
+    "string.prototype.matchall": "^4.0.12",
     "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_NEW_JSX_TRANSFORM=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "vercel-install": "npm install --legacy-peer-deps"
