--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "dependencies": {
-    "build": "^0.1.4"
+  "scripts": {
+    "build": "cross-env DISABLE_CSS_MINIFICATION=true OPTIMIZE_CSS=true react-scripts build",
+    "build-no-css-min": "cross-env DISABLE_CSS_MINIFICATION=true react-scripts build",
+    "build-no-css-opt": "cross-env DISABLE_CSS_MINIFICATION=true OPTIMIZE_CSS=false react-scripts build"
+  }
+}
   }
 }
