--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "DISABLE_NEW_JSX_TRANSFORM=true react-scripts build",
+    "build": "cross-env GENERATE_SOURCEMAP=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "vercel-install": "npm install --legacy-peer-deps"
@@ -43,7 +43,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "cross-env": "^7.0.3"
   },
   "browserslist": {
     "production": [
