--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -8,8 +8,6 @@
     "@googlemaps/markerclusterer": "^2.6.2",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@heroicons/react": "^2.0.18",
-    "@mapbox/mapbox-gl-directions": "^4.3.1",
-    "@mapbox/mapbox-gl-geocoder": "^5.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@supabase/supabase-js": "^2.55.0",
     "@svgr/webpack": "^5.5.0",
@@ -41,8 +39,6 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "jsonpointer": "^5.0.1",
-    "leaflet": "^1.9.4",
-    "mapbox-gl": "^3.14.0",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -59,7 +55,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "react-map-gl": "^7.1.9",
     "react-query": "^3.39.3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.30.1",
@@ -85,11 +80,10 @@
     "vercel-install": "npm install --legacy-peer-deps"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^2.7.19",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.4.1"
   },
   "browserslist": {
     "production": [
