--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -4,6 +4,9 @@
   "private": false,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "@googlemaps/js-api-loader": "^1.16.10",
     "@googlemaps/markerclusterer": "^2.6.2",
     "@googlemaps/react-wrapper": "^1.2.0",
