--- a/puper/frontend/ios/App/Podfile
+++ b/puper/frontend/ios/App/Podfile
@@ -8,6 +8,12 @@ use_frameworks!
 # Requires CocoaPods 1.6 or newer
 install! 'cocoapods', :disable_input_output_paths => true
 
+# Fix for build script warnings
+def fix_config(config)
+  config.build_settings['ENABLE_BITCODE'] = 'NO'
+  config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+end
+
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
@@ -21,4 +27,18 @@ end
 
 post_install do |installer|
   assertDeploymentTarget(installer)
+
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      fix_config(config)
+    end
+  end
+
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        fix_config(config)
+      end
+    end
+  end
 end
