--- a/puper/frontend/package.json
+++ b/puper/frontend/package.json
@@ -14,6 +14,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@supabase/supabase-js": "^2.55.0",
     "@svgr/webpack": "^5.5.0",
+    "@types/three": "^0.180.0",
     "ajv-keywords": "^3.5.2",
     "axios": "^1.6.2",
     "babel-jest": "^27.4.2",
@@ -70,6 +71,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "three": "^0.180.0",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
